[package]
name = "kcheck"
version = "0.1.0"
edition = "2021"

[dependencies]
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }

clap = { version = "4.4.16", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }