[package]
name = "kcheck"
version = "0.1.0"
rust-version = "1.80.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
strip = true
overflow-checks = true
panic = "abort"

[dependencies]
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.15.1" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.15.1" }

clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
